# flask-template

./: .gitignore  Dockerfile  README.md  app.py  config.py  config.yaml  db.json  log_setup.py  pyproject.toml
flask_template/driver/: tinydb.py
flask_template/handler/: todo.py  todolist.py  tokenrefresh.py  userlogin.py
flask_template/model/: todo.py
flask_template/service/: todo.py  todolist.py
